[metadata]
name = text_fancipy
description = Python tool for converting all plain English letters in text into various fancy-styled text and back
author = Adam Twardoch
author_email = adam+github@twardoch.com
license = Apache-2.0
license_files = LICENSE.txt
long_description = file: README.md
long_description_content_type = text/markdown; charset=UTF-8; variant=GFM
url = https://github.com/twardoch/text_fancipy

project_urls =
    Documentation = https://github.com/twardoch/text_fancipy
    Source = https://github.com/twardoch/text_fancipy

platforms = any

classifiers =
    Development Status :: 4 - Beta
    Programming Language :: Python :: 3.9
    Topic :: Text Processing
    Topic :: Text Processing :: Filters
    Topic :: Text Processing :: Linguistic



[options]
zip_safe = False
packages = find_namespace:
include_package_data = True
package_dir =
    =src

python_requires = >=3.9
install_requires =
    importlib-metadata; python_version<"3.8"
    fire


[options.packages.find]
where = src
exclude =
    tests

[options.extras_require]
testing =
    setuptools
    pytest
    pytest-cov

[options.entry_points]
console_scripts =
    fancipy=text_fancipy.__main__:cli

[tool:pytest]
testpaths = tests
addopts = -v
filterwarnings =
    ignore:'pipes' is deprecated:DeprecationWarning

[devpi:upload]
no_vcs = 1
formats = bdist_wheel

[flake8]
max_line_length = 88
extend_ignore = E203, W503

exclude =
    .tox
    build
    dist
    .eggs
    docs/conf.py

[pyscaffold]
# PyScaffold's parameters when the project was created.
# This will be used when updating. Do not change!
version = 4.5
package = text_fancipy
extensions =
    github_actions
    markdown
    pre_commit
